<resources>
    <string name="app_name">Okler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="jpeg_extension">.jpeg</string>
    <string name="preference_file_key">OklerSharedPrefFile</string>
    <string name="PrescriptionImgeasDirPath">PrescriptionsDir</string>
    <string name="title_activity_services_categories"></string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_upload_prescription"></string>
    <string name="title_activity_prescription_preview"></string>
    <string name="title_activity_physiotherapy"></string>
    <string name="title_activity_health_shop_grid"></string>
    <string name="title_activity_health_shop_list_view"></string>
    <string name="title_activity_health_shop_single"></string>
    <string name="title_activity_payment_mode"></string>
    <string name="title_activity_sign_in"></string>
    <string name="title_activity_sign_up"></string>
    <string name="title_activity_product_checkout"></string>
    <string name="title_activity_product_checkout_summary"></string>
    <string name="title_activity_intro_screen"></string>
    <string name="title_activity_medical_services"></string>
    <string name="APP_ID">945660018842332</string>
    <string name="delivery_address">Delivery Address</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        
        <item>Rate Us</item>
        <item>Share The App</item>
        <item>Support/Help</item>
        <item>FAQ</item>
        <item>Legal Information</item>
        <item>Contact Us</item>
        <item>Terms and Conditions</item>
    </string-array>
    <string name="serverUrl">http://183.82.110.105:8081/oklerapi/</string>
    <string name="getServiceRequiredForPhysio">api/nurse/getservicerequired_for?required_type=2</string>
    <string name="your_location">Your Location -</string>
    <string name="viewMore">View More</string>
    <string name="viewLess">View Less</string>
    <string name="description">DESCRIPTION</string>
    <string name="generic_name">Generic Name</string>
    <string name="company_name">Company Name</string>
    <string name="consti_name">Constituent Name</string>
    <string name="indication">INDICATION</string>
    <string name="contra_indication">CONTRA INDICATION</string>
    <string name="caution">CAUTION</string>
    <string name="title_activity_diagnostics"></string>
    <string name="title_activity_product_details"></string>
    <string name="side_effect">SIDE EFFECT</string>
    <string name="serviceUrl">http://183.82.110.105:8081/oklerapi/nurse/getservicerequired_for?required_type=</string>
    <string name="relationUrl">http://183.82.110.105:8081/oklerapi/nurse/getrelations</string>
    <string name="cityUrl">http://183.82.110.105:8081/oklerapi/nurse/getcities?</string>
    <string name="stateUrl">http://183.82.110.105:8081/oklerapi/nurse/getstates</string>
    <string name="bookAppointment">http://183.82.110.105:8081/oklerapi/nurse/addNurseAttendbook?</string>
    <string name="weight">WEIGHT</string>
    <string name="dosage">DOSAGE</string>
    <string name="check_Avail">Check Pincode Availability</string>
    <string name="check">CHECK</string>
    <string name="available">Available</string>
    <string name="ships_to">Ships to</string>
    <string name="title_activity_diagno_tests"></string>
    <string name="title_activity_diagno_package_home"></string>
    <string name="title_activity_diagno_disease_home"></string>
    <string name="next_btn">Next</string>
    <string name="select_test">SELECT TEST</string>
    <string name="labs_available">Labs Available</string>
    <string name="schedule_pickup">SCHEDULE PICKUP</string>
    <string name="title_activity_diagno_labs_available"></string>
    <string name="title_activity_diagno_lab_test_info"></string>
    <string name="mandatory_info">Mandatory Info</string>
    <string name="title_activity_diagno_lab_test_pkg"></string>
    <string name="mrp">MRP:</string>
    <string name="okler_price">Okler Price:</string>
    <string name="you_save">You Save:</string>
    <string name="top_generic">TOP GENERIC</string>
    <string name="available_subst">AVAILABLE SUBSTITUTES</string>
    <string name="change">Change</string>
    <string name="payment_Information">PAYMENT INFORMATION</string>
    <string name="cashOndelivery">Cash on Delivery</string>
    <string name="title_activity_checkout_summary"></string>
    <string name="title_activity_medicine_home"></string>
    <string name="title_activity_allopathy"></string>
    <string name="title_activity_ayurvedic"></string>
    <string name="title_activity_homeopathy"></string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="i_agree">I agree to the </string>
    <string name="terms_n_cons">Terms and Conditions</string>
    <string name="apply">APPLY</string>
    <string name="coupon_appl_text">The coupon has been applied to your bill.</string>
    <string name="coupon_heading">ADD COUPON CODE</string>
    <string name="coupon_code_desc">(Coupons are applicable on Amount)</string>
    <string name="amount">Amount</string>
    <string name="okler_discount">Okler Discount</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="shipping_charg">Shipping Charges</string>
    <string name="tax">Tax</string>
    <string name="net_pay">Net Payable</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_product_checkout_delivery_address"></string>
    <string name="deliveryAddTitle">SELECT A DELIVERY ADDRESS</string>
    <string name="text_proceed">PROCEED</string>
    <string name="title_activity_product_checkout_list_view"></string>
    <string name="titleText">TOTAL ORDER VALUE :</string>
    <string name="next_text">NEXT</string>
    <string name="title_activity_search_by_med"></string>
    <string name="title_activity_search_by_diseases"></string>
    <string name="title_activity_search_by_diesease"></string>
    <string name="title_activity_search_by_medicine"></string>
    <string name="title_activity_product_checkout_user_detail"></string>
    <string name="textProcess">PROCESS</string>
    <string name="title_activity_product_checkout_new_address"></string>
    <string name="text_delAdd">DELIVERY ADDRESS</string>
    <string name="text_preferedAdd">PREFERRED DELIVERY TIME</string>
    <string name="text_state">STATE</string>
    <string name="text_pincode">PINCODE</string>
    <string name="text_firstName"> FIRSTNAME</string>
    <string name="text_surname">SURNAME</string>
    <string name="text_save">SAVE INFORMATION &amp; CONTINUE</string>
    <string name="text_addAddress">ADD A NEW ADDRESS</string>
    <string name="title_activity_med_up_presc"></string>
    <string name="upload_later">UPLOAD LATER</string>
    <string name="choose_from_existing">CHOOSE FROM EXISTING PRESCRIPTIONS</string>
    <string name="up_your_presc">Upload Your Prescription</string>
    <string name="getDiseasesUrlAllo">http://183.82.110.105:8081/oklerapi/diseasemapping/getAllDiseasesMapping?mapping_typeid=4</string>
    <string name="getMedFordiseaseUrlPart1">http://183.82.110.105:8081/oklerapi/diseasemapping/getrecordsbydiseases?mapping_typeid=4&amp;disease_id=</string>
    <string name="getDiseasesUrlDiagno">http://183.82.110.105:8081/oklerapi/diseasemapping/getAllDiseasesMapping?mapping_typeid=2</string>
    <string name="getDiseasesUrlHome">http://183.82.110.105:8081/oklerapi/diseasemapping/getAllDiseasesMapping?mapping_typeid=5</string>
    <string name="getDiseasesUrlAyur">http://183.82.110.105:8081/oklerapi/diseasemapping/getAllDiseasesMapping?mapping_typeid=3</string>
    <string name="getdiseaseSearchPart">&amp;search=</string>
    <string name="getdiseasePagePart">&amp;page=</string>
    <string name="title_activity_new_sign_in">Sign In</string>
    <string name="text_singup">SIGN UP</string>
    <string name="text_singIn">SIGN IN</string>
    <string name="alreadyAc">Already have an account ?</string>
    <string name="elseLogin">Login</string>
    <string name="title_activity_hsnew">HSNew</string>
    <string name="text_forgetPwd">Forgot Password?</string>
    <string name="text_sign">Sign in with :</string>
    <string name="text_new">New here? </string>
    <string name="elseSignUp">Sign Up</string>
    <string name="title_activity_my_cart"></string>
    <string name="text_edit">EDIT</string>
    <string name="text_ok">OK</string>
    <string name="select_package">SELECT PACKAGE</string>
    <string name="select_diseases">SELECT DISEASES</string>
    <string name="title_activity_prescription_delivery"></string>
    <string name="title_activity_prescription_list"></string>
    <string name="title_activity_prescription_preview1"></string>
    <string name="title_activity_prescription_preview2"></string>
    <string name="title_activity_diagno_order_summary"></string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="sched_appoint">SCHEDULE APPOINTMENT</string>
    <string name="queryText">In case of any queries reach us at:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="title_activity_diagno_order_details"></string>
    <string name="diagno_order_details">DIAGNOSTICS ORDER DETAILS</string>
    <string name="check_order_status">CHECK ORDER STATUS</string>
    <string name="place_new_order">PLACE NEW ORDER</string>
    <string name="order_placed_text">Your Order Placed Successfully</string>
    <string name="title_activity_diagno_schedule_pickup"></string>
    <string name="home_pickup">HOME PICKUP</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="book_appoint">BOOK APPOINTMENT</string>
    <string-array name="time_array">
        <item>8:00 AM to 11:00 AM</item>
        <item>11:00 AM to 2:00 PM</item>
        <item>2:00 PM to 5:00 PM</item>
        <item>5:00 PM to 8:00 PM</item>
    </string-array>
    <string name="lab_visit">LAB VISIT</string>
    <string name="title_activity_my_profile"></string>
    <string name="title_activity_profile_address"></string>
    <string name="title_activity_profile_new_address"></string>
    <string name="title_activity_profile_change_password"></string>
    <string name="allopathy">Allopathy</string>
    <string name="ayurvedic">Ayurveda</string>
    <string name="homeopathy">Homeopathy</string>
    <string name="lab_near_you">Lab Near You:</string>
    <string name="enter_pin_for_lab">Enter Pincode to Select Other Lab Location:</string>
    <string name="title_activity_my_order_home"></string>
    <string name="title_activity_my_order_med__hs__details"></string>
    <string name="title_activity_my_order_ms__history"></string>
    <string name="title_activity_my_order_physio__history"></string>
    <string name="button_clear">CLEAR LIST</string>
    <string name="appointment_Date">Appointment Date from</string>
    <string name="appointment_date_to">Appointment Date to</string>
    <string name="relation">Relation</string>
    <string name="services_required">Services Required</string>
    <string name="we_would_love">We would love to hear from you!</string>
    <string name="tell_us_what">Tell us what\'s on your mind and  we will get back to you in 2 business days!</string>
    <string name="how_would_you">How would you like us to contact you?</string>
    <string name="moblie">Mobile</string>
    <string name="email_only">Email</string>
    <string name="give_us_all">Give us all the details</string>
    <string name="security_code">Security Code</string>
    <string name="send_msg">SEND MESSAGE</string>
    <string name="prodHoriTitle">CUSTOMERS WHO BOUGHT THIS ITEM ALSO BOUGHT</string>
    <string name="justViewdProducts">YOU RECENTLY VIEW THIS PRODUCT</string>
</resources>