<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/White">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_pin_LL"
        >
    <!-- <TextView 
        android:id="@+id/checkAvailTV"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="30"
        android:text="@string/check_Avail"
        
        /> -->
	<RelativeLayout 
	    android:id="@+id/enter_pin_LL"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    >
	    <EditText 
	        android:id="@+id/enter_pincode_Et"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/check_Avail"
	        android:inputType="numberDecimal"
	        android:imeOptions="actionDone"
	        android:gravity="center_horizontal"
	        android:textSize="17sp"
	        android:layout_alignParentLeft="true"
	        android:layout_toLeftOf="@+id/button_check"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="2dp"
	        
	        />
	    <Button 
	        android:id="@+id/button_check"
	        android:background="@color/Blue"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/check"
	        
	        android:textColor="@color/White"
	        />
	    
	</RelativeLayout>
	</LinearLayout>
	<RelativeLayout
	    android:id="@+id/available_LL"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:visibility="gone"
	    >
	    <TextView 
	        android:id="@+id/availableTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/available"
	        android:textColor="@color/Red"
	        android:textSize="20sp"	        
	        android:layout_alignParentLeft="true"
	        />
	    
	    <ImageView 
	        android:id="@+id/edit_pincode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/blue_edit_pencil"
	        android:layout_alignParentRight="true"
	        />
	    <TextView 
	        android:id="@+id/changeTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/Blue"
	        android:layout_toLeftOf="@+id/edit_pincode"
	        android:text="@string/change"
	        android:textSize="17sp"
	        />
	    <TextView 
	        android:id="@+id/pincodeTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/changeTv"
	        android:layout_marginRight="10dp"
	        android:text="400000"
	        android:textSize="17sp"
	        
	        />
	    <TextView 
	        android:id="@+id/shipstoTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/pincodeTv"
	        android:layout_marginRight="5dp"
	        android:textSize="17sp"
	        android:text="@string/ships_to"
	        />
	</RelativeLayout>
</LinearLayout>
