<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.okler.helpnsupport.SupportHelpActivity"
    android:background="@color/White" >

    <include 
            android:id="@+id/toolbar" 
            layout="@layout/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            />
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/send_message">
        <RelativeLayout 
            android:id="@+id/RL_for_scrll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >
            <TextView 
                android:id="@+id/we_would_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="@string/we_would_love"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tell_us_what"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/we_would_love"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|center"
                android:text="@string/tell_us_what" />

            <RelativeLayout 
                android:id="@+id/Rl_for_sep"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tell_us_what"
                android:layout_marginTop="10dp"
                >
                <include layout="@layout/separator_grey_1dp"/>
            </RelativeLayout>
            <TextView 
                android:id="@+id/how_would_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="@string/how_would_you"
                android:layout_below="@+id/Rl_for_sep"
                android:layout_marginTop="10dp"
                />
            <LinearLayout 
                android:id="@+id/choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/how_would_you"
                android:layout_marginTop="10dp"
                >
                <RelativeLayout 
                    android:id="@+id/moblie_Rl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView 
                        android:id="@+id/mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moblie"
                        />

                    <ImageView
                        android:id="@+id/mobile_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/mobile"
                        android:src="@drawable/red_circle_with_white_icon" />

                </RelativeLayout>
                <RelativeLayout 
                    android:id="@+id/email_RL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    >
                    <TextView 
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_only"
                        />

                    <ImageView
                        android:id="@+id/email_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/email"
                        android:src="@drawable/grey_radio_btn" />
                    
                </RelativeLayout>
                
            </LinearLayout>
            <Spinner 
                android:id="@+id/reason_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choice"
                android:layout_marginTop="10dp"
                android:background="@drawable/linear_border_black"
                android:descendantFocusability="blocksDescendants"  />

              <EditText
                  android:id="@+id/give_details"
                  android:layout_width="fill_parent"
                  android:layout_height="300dp"
                  android:layout_below="@+id/reason_spinner"
                  android:layout_marginTop="10dp"
                  android:background="@drawable/linear_border_black"
                  android:gravity="top"
                  android:hint="@string/give_us_all" />

               <TextView
                   android:id="@+id/capcha_img"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/give_details"
                   android:layout_marginBottom="20dp"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/captcha_img02"
                   android:gravity="center_vertical|center_horizontal"
                   android:src="@drawable/captcha_image"
                   android:textSize="30sp"
                   android:textStyle="bold" />

              <EditText 
                  android:id="@+id/sec_code"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/capcha_img"
                  android:layout_below="@+id/give_details"
                  android:hint="@string/security_code"
                  android:layout_marginTop="10dp"
                  android:maxLength="5"
                  android:layout_marginBottom="20dp"
                  android:imeOptions="actionDone"
                  android:inputType="text" />
            </RelativeLayout>
        </ScrollView>
        <Button 
	        android:id="@+id/send_message"
	        android:layout_width="fill_parent"
	        android:layout_height="?actionBarSize"
    		android:minHeight="?actionBarSize"
	        android:background="@color/Blue"
	        android:text="@string/send_msg"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:textColor="@color/White"
	        android:layout_above="@+id/bottombar"
	        android:layout_marginTop="10dp"
	        />
    <include
    	android:layout_alignParentBottom="true"
        android:id="@id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_bottom_bar" />

</RelativeLayout>
