<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/White"  
    tools:context="com.okler.android.ProductDetailsActivity" >
<!-- ToolBar -->
    <include 
            android:id="@+id/toolbar" 
            layout="@layout/tool_bar_cart"
            android:layout_alignParentTop="true"
            />

<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollViewProdDetails"
    android:layout_below="@+id/toolbar"
    android:layout_above="@+id/bottombar"
    >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RL_For_scroll"
        >
        <include 
        android:id="@+id/main_prod_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_product_info_layout"
        android:layout_marginBottom="10dp"
        />
        <RelativeLayout 
            android:id="@+id/top_gen_heading_RL"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
   	 		android:minHeight="?actionBarSize"
   	 		android:layout_below="@+id/main_prod_info"
   	 		android:visibility="gone"
   	 		android:background="@color/LightGreyWhite"
            >
            <TextView 
                android:id="@+id/top_Gen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/top_generic"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
           
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/gre_separator_RL"
            android:layout_below="@+id/top_gen_heading_RL"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        <include layout="@layout/separator_grey_1dp"/> 
</RelativeLayout>
        <include 
             android:layout_below="@+id/gre_separator_RL"
        android:id="@+id/top_gen_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_product_info_layout"
        android:visibility="gone"
       android:layout_marginBottom="10dp"
        /> 
     <RelativeLayout android:id="@+id/horiScrollMainLayout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_below="@id/gre_separator_RL"
         android:visibility="gone">
        
     	<LinearLayout 
            android:id="@+id/horiScrollayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            	<TextView
            	    android:id="@+id/titleSmilarProd"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:textColor="@color/Black"
                	android:text="@string/prodHoriTitle"
                	android:gravity="center_horizontal"
                	android:background="@color/LightGreyWhite"
                	android:layout_marginTop="5dp"
                	android:layout_marginBottom="5dp"/>
            	
            	<TextView
            	    android:id="@+id/no_items"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:textColor="@color/Black"
                	android:text=""
                	android:gravity="center_horizontal"
                	android:background="@color/LightGreyWhite"
                	android:layout_marginTop="5dp"
                	android:layout_marginBottom="5dp"
                	android:visibility="gone"/>
            	
          		<HorizontalScrollView
				   android:id="@+id/prodHSScrView"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
				   android:background="@color/White">
						<LinearLayout
					    	android:id="@+id/innerLayout1"
					    	android:layout_width="match_parent"
					    	android:layout_height="wrap_content"
					    	android:orientation="horizontal"
					    	>
						</LinearLayout>
		   		    	
		  		</HorizontalScrollView>
		</LinearLayout>
		
		<LinearLayout 
		     	 android:id="@+id/horiScrollayout2"
           		 android:layout_width="match_parent"
            	 android:layout_height="wrap_content"
            	 android:orientation="vertical"
            	 android:layout_below="@id/horiScrollayout1"> 
            	 <TextView
            	    android:id="@+id/titleJustViewdProd"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:textColor="@color/Black"
                	android:text="@string/justViewdProducts"
                	android:gravity="center_horizontal"
                	android:background="@color/LightGreyWhite"
                	android:layout_marginTop="5dp"
                	android:layout_marginBottom="5dp"/>
            	 
            	 <TextView
            	    android:id="@+id/no_viewed_prods"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:textColor="@color/Black"
                	android:text=""
                	android:gravity="center_horizontal"
                	android:background="@color/LightGreyWhite"
                	android:layout_marginTop="5dp"
                	android:layout_marginBottom="5dp"
                	android:visibility="gone"/>
            	    
		   		<HorizontalScrollView
		    		android:id="@+id/justViewedScrView"
		    		android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:background="@color/White">
						<LinearLayout
					    	android:id="@+id/innerLayout2"
					    	android:layout_width="match_parent"
					    	android:layout_height="wrap_content"
					    	android:orientation="horizontal"
					    	android:background="@color/LightGrey">
						</LinearLayout>
		   		    
				</HorizontalScrollView>
		</LinearLayout>
  </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/avail_subs_heading_RL"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
   	 		android:minHeight="?actionBarSize"
   	 		android:layout_below="@+id/top_gen_info"
   	 		android:layout_marginLeft="10dp"
   	 		android:layout_marginRight="10dp"
   	 		android:visibility="gone"
   	 		
            >
            <TextView 
                android:id="@+id/avail_subs_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/available_subst"
            android:layout_centerInParent="true"
                />
            
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/red_separator_RL"
            android:layout_below="@+id/avail_subs_heading_RL"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            >
            
        <include layout="@layout/separator_red_1dp"/>
        </RelativeLayout>
		<LinearLayout
		    android:id="@+id/substitutesLL"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_below="@+id/red_separator_RL"
		    android:visibility="gone"
		    ></LinearLayout>

		

</RelativeLayout>   
</ScrollView>
    <!-- Bottombar -->
    <include
    	android:layout_alignParentBottom="true"
        android:id="@+id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_bottom_bar"
         />



</RelativeLayout>
